Bug 961696 - Accessible object:state-changed:focused events for imagemap links are broken. r=tbsaunde