accessible/src/base/FocusManager.h
@@ -123,6 +123,12 @@ private:
    */
   nsIDocument* FocusedDOMDocument() const;
 
+  /**
+   * Return accessible for a focusable node.
+   */
+  Accessible* GetFocusableAccessibleFor(nsINode* aNode,
+                                        DocAccessible* aDoc) const;
+
 private:
   nsRefPtr<Accessible> mActiveItem;
   nsRefPtr<Accessible> mActiveARIAMenubar;
